--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,124 @@
     transform: rotate(360deg);
   }
 }
+body {
+  background-color: #000000 !important;
+  color: #ffffff ;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.App {
+  padding: 20px;
+}
+
+/* Navigation Bar */
+.navbar {
+  background-color: #141414 !important;
+}
+
+.navbar-brand, .nav-link {
+  color: #ffffff !important;
+}
+
+.nav-link:hover {
+  color: #b3b3b3 !important;
+}
+
+/* Movie List */
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.col {
+  flex: 1 1 calc(20% - 20px);
+  max-width: calc(20% - 20px);
+  display: flex;
+  justify-content: center;
+}
+
+.col .card {
+  width: 100%;
+  max-width: 220px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #2c2c2c;
+  border: none;
+}
+
+.card-title, .card-text {
+  color: #ebe1e1 !important;
+}
+
+.card-img-top {
+  height: 300px;
+  object-fit: cover;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card-body .btn {
+  background-color: #e50914;
+  border: none;
+}
+
+.card-body .btn:hover {
+  background-color: #f40612;
+}
+
+/* Filter Section */
+.filter {
+  display: flex;
+  justify-content:space-between;
+  margin-bottom: 30px;
+}
+
+.filter input {
+  background-color: #333;
+  border: 1px solid #555;
+  color: #ffffff;
+  padding: 10px;
+  width: 100%;
+}
+
+.filter input::placeholder {
+  color: #b3b3b3;
+}
+
+.filter .btn {
+  background-color: #ffffff;
+  border: none;
+}
+
+.filter .btn:hover {
+  background-color: #f40612;
+}
+
+/* Rating Component */
+.display-6 {
+  text-align: center;
+  margin-right: 30px;
+}
+
+.display-6 .icon {
+  fill: #ffffff;
+}
+.container5 {
+  display: flex;
+  
+
+}
+.color {
+  color: #f40612;
+}
