--- a/src/App.css
+++ b/src/App.css
@@ -157,3 +157,47 @@ body {
 .color {
   color: #f40612;
 }
+.movie-details {
+  padding: 20px;
+  background-color: #60626436;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.movie-title {
+  font-size: 2.5em;
+  color: #f40612;
+  margin-bottom: 20px;
+}
+
+.movie-description {
+  font-size: 1em;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.video {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.back-button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 1em;
+  color: #000000;
+  background-color: #f40612;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.back-button:hover {
+  background-color: #0056b3;
+}
+
